Manual review
- dropped throws IOException in some places
- future refactorings in TODO.md